test/cli/test-validating-policy/json-multiple-payloads/payload-fail.json
{
    "resource_changes": [
      {
        "type": "aws_acmpca_certificate_authority",
        "change": {
          "actions": ["create"],
          "after": {
            "type": "ROOT",
            "enabled": true
          }
        }
      }
    ]
  }
