test/cli/test-validating-policy/json-multiple-payloads/payload-pass.json
{
    "resource_changes": [
      {
        "type": "aws_acmpca_certificate_authority",
        "change": {
          "actions": ["create"],
          "after": {
            "type": "ROOT",
            "enabled": false
          }
        }
      },
      {
        "type": "aws_acmpca_certificate_authority",
        "change": {
          "actions": ["create"],
          "after": {
            "type": "SUBORDINATE",
            "enabled": true
          }
        }
      }
    ]
  }
